--- a/cshape/WeightRandom/WeightRandom.csproj
+++ b/cshape/WeightRandom/WeightRandom.csproj
@@ -88,8 +88,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AliasMethod.cs" />
+    <Compile Include="BinarySearch.cs" />
+    <Compile Include="Hopscotch.cs" />
+    <Compile Include="Interfaces\IRandomSelector.cs" />
+    <Compile Include="Interfaces\IRandomSelectorBuilder.cs" />
+    <Compile Include="Linear.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomMath.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
